<resources>
    <string name="app_name">GorbovShop</string>
    <string name="start_shopping">start shopping</string>
    <string name="splashscreen_background_image">splashscreen background image</string>
    <string name="munchbox_main_logo">munchbox main logo</string>
    <string name="dish1">Shrimp Pad Thai</string>
    <string name="dish2">Salt and Pepper Chicken</string>
    <string name="dish3">Avocado Salad</string>
    <string name="dish1_desc_text">Pad Thai is typical street fare across Thailand—and it\'s probably the #1
        order at your local Thai restaurant. In fact, this popular stir-fried noodle dish is the national dish
        of Thailand. But what exactly is it about Pad Thai that makes it so delicious? Bold, umami flavors and
        a variety of textures make Pad Thai into a comforting meal that everyone can love.</string>
    <string name="dish2_desc_text"> Delicious bits of chicken with a salt and pepper crust on a bed of fluffy rice.
        Wok fried spices and vegetables are mixed with battered chicken breast to create the ultimate combination of salt, spice and crunch.</string>
    <string name="dish3_desc_text"> Creamy avocadoes and tangy tomatoes are mixed with fresh lettuce to make a healthy and scrumptious meal.
    The salad is topped with a sumptuous caesar salad dressing and is dotted with seasoned breadcrumbs and chili flakes.</string>
    <string name="dish1_price_text">$12</string>
    <string name="dish2_price_text">$10</string>
    <string name="dish3_price_text">$8</string>
    <string name="plus_button_text">+</string>
    <string name="minus_button_text">−</string>
    <string name="padthai_img_content_desc">A vibrant image of a pad thai dish</string>
    <string name="quantity_text">Quantity: 0</string>
    <string name="padthai_subtotal_text">Subtotal: 0</string>
    <string name="checkout_button_text">Proceed To Checkout</string>
    <string name="checkout_textview">TextView</string>
</resources>
